--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,12 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/owl.carousel/dist/assets/owl.carousel.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/owl.carousel/dist/owl.carousel.js"
+            ]
           },
           "configurations": {
             "production": {
